updates to child 1

--- a/app/views/births/multipleBirths3/00-service-selector.html
+++ b/app/views/births/multipleBirths3/00-service-selector.html
@@ -20,11 +20,14 @@
             Births
         </h2>
 
-       <p class="govuk-body"><a href="01-search.html" class="govuk-link">
+       <p class="govuk-body"><a href="" class="govuk-link">
         Register a birth
     </a></p>
     <p class="govuk-body"><a href="" class="govuk-link">
         Register a stillbirth
+    </a></p>
+    <p class="govuk-body"><a href="01-search.html" class="govuk-link">
+        Register multiple births
     </a></p>
 
     </div>    
