--- a/app/views/births/multipleBirths3/additionalInfo/comments.html
+++ b/app/views/births/multipleBirths3/additionalInfo/comments.html
@@ -32,7 +32,8 @@ href: "javascript:window.history.back()"
       </section>
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "../tasks/index.html"
         })
         }}
       </div>
