--- a/app/views/births/multipleBirths3/childsDetails/02-place-of-birth.html
+++ b/app/views/births/multipleBirths3/childsDetails/02-place-of-birth.html
@@ -160,9 +160,11 @@ href: "javascript:window.history.back()"
               type="text" autocomplete="postal-code" value="{{ data.childsAddressPostcode or 'SO50 6FN' }}">
           </div>
         </fieldset>
-        {{ govukButton({
-        text: "Save and return"
-        }) }}
+
+
+        <a class="govuk-button" href="../tasks/index.html">Save and return</a>
+
+  
 
 
       </div>
