--- a/app/views/births/multipleBirths3/parentsDetails/fathers-details.html
+++ b/app/views/births/multipleBirths3/parentsDetails/fathers-details.html
@@ -275,7 +275,7 @@ href: "javascript:window.history.back()"
         id: "fathersOtherCountry",
         name: "fathersOtherCountry",
         label: {
-        text: "Enter country name"
+        text: "Country or region"
         },
         classes: "govuk-!-width-two-thirds"
         }) + '</div>'
@@ -337,7 +337,13 @@ href: "javascript:window.history.back()"
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
-                23 West drive, Eastleigh, S050 6FN
+                29 Willow Crescent, Eastleigh, SO50 6DR
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                18 Hawthorn Way, Eastleigh, SO59 6QN
               </label>
             </div>
             <div class="govuk-radios__item">
@@ -353,7 +359,8 @@ href: "javascript:window.history.back()"
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "../tasks/index.html"
         })
         }}
       </div>
