--- a/app/views/births/multipleBirths3/parentsDetails/mothers-details.html
+++ b/app/views/births/multipleBirths3/parentsDetails/mothers-details.html
@@ -276,7 +276,7 @@ href: "javascript:window.history.back()"
         id: "mothersOtherCountry",
         name: "mothersOtherCountry",
         label: {
-        text: "Enter country name"
+        text: "Country or region"
         },
         classes: "govuk-!-width-two-thirds"
         }) + '</div>'
@@ -359,7 +359,7 @@ href: "javascript:window.history.back()"
             Street address line 1
           </label>
           <input class="govuk-input govuk-!-width-two-thirds" id="address-line1" name="address-line1" type="text"
-            value="23 West Drive">
+            value="29 Willow Crescent">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-line-1">
@@ -400,7 +400,7 @@ href: "javascript:window.history.back()"
             Postcode
           </label>
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="addressPostcode" type="text"
-            autocomplete="postal-code" value="SO50 6FN">
+            autocomplete="postal-code" value="SO50 6DR">
         </div>
         <p class="govuk-body">
           <a href="#" class="govuk-link govuk-link--no-visited-state">Search by postcode</a>
@@ -408,9 +408,34 @@ href: "javascript:window.history.back()"
         <br>
       </fieldset>
 
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+            <h1 class="govuk-fieldset__heading">
+              Is this the current address?
+            </h1>
+          </legend>
+          <div class="govuk-radios" data-module="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                Yes
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                No
+              </label>
+            </div>
+          </div>
+        </fieldset>
+      </div>
+
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "../tasks/index.html"
         })
         }}
       </div>
