--- a/app/views/births/multipleBirths3/submit/confirmation-page.html
+++ b/app/views/births/multipleBirths3/submit/confirmation-page.html
@@ -11,7 +11,7 @@
 
       {{ govukPanel({
         titleText: "Registration complete",
-        html: "System number 500248148"
+        html: "Entry number 500248148"
       }) }}
 
       <br>
@@ -23,10 +23,12 @@
       <p class="govuk-body">
         You can now print the birth certificate.
       </p>
-
+<br>
       
 
-
+      <h3 class="govuk-heading-s">
+        Oliver Perez Martinez
+      </h3>
       <p  class="govuk-body govuk-!-margin-bottom-9">
         <a href="/public/documents/Oliver-birth-certificate.pdf" target="_blank" class="govuk-link">
           View and print standard certificate (opens in a new tab)
