--- a/app/views/births/multipleBirths3/triage/02-evidence.html
+++ b/app/views/births/multipleBirths3/triage/02-evidence.html
@@ -30,17 +30,7 @@ href: "javascript:window.history.back()"
           <br>
           
 
-          <details class="govuk-details">
-            <summary class="govuk-details__summary">
-              <span class="govuk-details__summary-text">
-                Help with ID requirements
-              </span>
-            </summary>
-            <div class="govuk-details__text">
-              The informant must prove their identity before they can register a birth. For details of acceptable ID documents, see the 
-              <a href="" class="govuk-link">Births Handbook </a>.
-            </div>
-          </details>
+      
           
 
           <br>
@@ -63,7 +53,7 @@ href: "javascript:window.history.back()"
   <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-gro-question">
     <fieldset class="govuk-fieldset" role="group" aria-describedby="gro-question-hint">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-        Has GRO given permission to register the birth?
+        Has GRO given permission to register without evidence of identity?
       </legend>
 
       <div class="govuk-radios" data-module="govuk-radios">
