--- a/app/views/births/multipleBirths3/triage/05-check-details.html
+++ b/app/views/births/multipleBirths3/triage/05-check-details.html
@@ -54,7 +54,7 @@ href: "javascript:window.history.back()"
           "civilPartnership": "Civil partnership",
           "marriedNeither": "Neither"
           } %}
-          {{ marriedOrCivilPartnershipText[data['marriedOrCivilPartnership']] or "Married" }}
+          {{ marriedOrCivilPartnershipText[data['marriedOrCivilPartnership']] or "No" }}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="/births/multipleBirths3/triage/03-marital-status">Change<span class="govuk-visually-hidden"> customer
