--- a/app/views/births/multipleBirths3/parentsDetails/fathers-name.html
+++ b/app/views/births/multipleBirths3/parentsDetails/fathers-name.html
@@ -204,7 +204,8 @@ href: "javascript:window.history.back()"
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "../tasks/index.html"
         }) }}
       </div>
 
