--- a/app/views/births/multipleBirths3/stats/voluntary.html
+++ b/app/views/births/multipleBirths3/stats/voluntary.html
@@ -37,182 +37,144 @@ href: "javascript:window.history.back()"
       <br>
 
 
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset" id="employment-mother" aria-required="false">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-            Mother's employment status
-          </legend>
-          <div id="authentication-code-hint" class="govuk-hint">
-            Occupation: Cleaner 
-          </div>
-          <div class="govuk-radios" data-module="govuk-radios">
+<!-- Mother's employment status -->
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+      Mother's employment status
+    </legend>
 
-            <!-- Employee, not supervising -->
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-employee-not-supervising"
-                name="employment-mother" type="radio" value="employee-not-supervising" {% if
-                data['employment-mother']=='employee-not-supervising' %}checked{% endif %}
-                data-aria-controls="conditional-industry">
-              <label class="govuk-label govuk-radios__label" for="employment-status-employee-not-supervising">
-                Employed, not supervising
-              </label>
-            </div>
+    <div id="mother-hint" class="govuk-hint">
+      Occupation: Teacher
+    </div>
 
-            <!-- Conditionally revealed industry input -->
-            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-industry">
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="industry">Industry</label>
-                <input class="govuk-input govuk-!-width-one-half" id="industry" name="industry" type="text"
-                  value="{{ data.industry or '' }}">
-              </div>
-            </div>
-
-            <!-- Other radio options -->
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-employee-supervising" name="employment-mother"
-                type="radio" value="employee-supervising" {% if data['employment-mother']=='employee-supervising'
-                %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-employee-supervising">
-                Employed, supervising
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-self-employed-no-employees"
-                name="employment-mother" type="radio" value="self-employed-no-employees" {% if
-                data['employment-mother']=='self-employed-no-employees' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-self-employed-no-employees">
-                Self-employed, no employees
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-self-employed-with-employees"
-                name="employment-mother" type="radio" value="self-employed-with-employees" {% if
-                data['employment-mother']=='self-employed-with-employees' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-self-employed-with-employees">
-                Self-employed, with employees
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-not-employed" name="employment-mother"
-                type="radio" value="not-employed" {% if data['employment-mother']=='not-employed' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-not-employed">
-                Not employed
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-not-known" name="employment-mother" type="radio"
-                value="not-known" {% if data['employment-mother']=='not-known' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-not-known">
-                Not known
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-refused" name="employment-mother" type="radio"
-                value="refused" {% if data['employment-mother']=='refused' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-refused">
-                Refused to answer
-              </label>
-            </div>
-          </div>
-        </fieldset>
+    <div class="govuk-radios" data-module="govuk-radios">
+      <!-- Employed -->
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-mother-employed" name="employment-mother" type="radio"
+          value="employed" data-aria-controls="conditional-mother-employed">
+        <label class="govuk-label govuk-radios__label" for="employment-mother-employed">
+          Employed
+        </label>
       </div>
 
-
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset" id="employment-father" aria-required="false">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-            Father's employment status
-          </legend>
-          <div id="authentication-code-hint" class="govuk-hint">
-            Occupation: Cleaner 
-          </div>
-          <div class="govuk-radios" data-module="govuk-radios">
-
-            <!-- Employee, not supervising -->
+      <!-- Conditional reveal -->
+      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-mother-employed">
+        <div class="govuk-form-group">
+          <div class="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-employee-not-supervising-father"
-                name="employment-father" type="radio" value="employee-not-supervising" {% if
-                data['employment-father']=='employee-not-supervising' %}checked{% endif %}
-                data-aria-controls="conditional-industry-father">
-              <label class="govuk-label govuk-radios__label" for="employment-status-employee-not-supervising-father">
-                Employed, not supervising
-              </label>
+              <input class="govuk-radios__input" id="mother-supervising" name="mother-supervisory-status" type="radio" value="supervising">
+              <label class="govuk-label govuk-radios__label" for="mother-supervising">Supervising</label>
             </div>
-
-            <!-- Conditionally revealed industry input -->
-            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-industry-father">
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="industry-father">Industry</label>
-                <input class="govuk-input govuk-!-width-one-half" id="industry-father" name="industry-father"
-                  type="text" value="{{ data['industry-father'] or '' }}">
-              </div>
-            </div>
-
-            <!-- Other radio options -->
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-employee-supervising-father"
-                name="employment-father" type="radio" value="employee-supervising" {% if
-                data['employment-father']=='employee-supervising' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-employee-supervising-father">
-                Employed, supervising
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-self-employed-no-employees-father"
-                name="employment-father" type="radio" value="self-employed-no-employees" {% if
-                data['employment-father']=='self-employed-no-employees' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-self-employed-no-employees-father">
-                Self-employed, no employees
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-self-employed-with-employees-father"
-                name="employment-father" type="radio" value="self-employed-with-employees" {% if
-                data['employment-father']=='self-employed-with-employees' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label"
-                for="employment-status-self-employed-with-employees-father">
-                Self-employed, with employees
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-not-employed-father" name="employment-father"
-                type="radio" value="not-employed" {% if data['employment-father']=='not-employed' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-not-employed-father">
-                Not employed
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-not-known-father" name="employment-father"
-                type="radio" value="not-known" {% if data['employment-father']=='not-known' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-not-known-father">
-                Not known
-              </label>
-            </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="employment-status-refused-father" name="employment-father"
-                type="radio" value="refused" {% if data['employment-father']=='refused' %}checked{% endif %}>
-              <label class="govuk-label govuk-radios__label" for="employment-status-refused-father">
-                Refused to answer
-              </label>
+              <input class="govuk-radios__input" id="mother-not-supervising" name="mother-supervisory-status" type="radio" value="not-supervising">
+              <label class="govuk-label govuk-radios__label" for="mother-not-supervising">Not supervising</label>
             </div>
           </div>
-        </fieldset>
+        </div>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="mother-industry">What industry do they work in?</label>
+          <input class="govuk-input govuk-!-width-one-half" id="mother-industry" name="mother-industry" type="text">
+        </div>
       </div>
+
+      <!-- Other options -->
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-mother-self-employed" name="employment-mother" type="radio" value="self-employed">
+        <label class="govuk-label govuk-radios__label" for="employment-mother-self-employed">Self-employed</label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-mother-not-employed" name="employment-mother" type="radio" value="not-employed">
+        <label class="govuk-label govuk-radios__label" for="employment-mother-not-employed">No gainful employment</label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-mother-not-known" name="employment-mother" type="radio" value="not-known">
+        <label class="govuk-label govuk-radios__label" for="employment-mother-not-known">Not known</label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-mother-refused" name="employment-mother" type="radio" value="refused">
+        <label class="govuk-label govuk-radios__label" for="employment-mother-refused">Refused to answer</label>
+      </div>
+    </div>
+  </fieldset>
+</div>
+
+<!-- Father's employment status -->
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+      Father's employment status
+    </legend>
+
+    <div id="father-hint" class="govuk-hint">
+      Occupation: Architect
+    </div>
+
+    <div class="govuk-radios" data-module="govuk-radios">
+      <!-- Employed -->
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-father-employed" name="employment-father" type="radio"
+          value="employed" data-aria-controls="conditional-father-employed">
+        <label class="govuk-label govuk-radios__label" for="employment-father-employed">
+          Employed
+        </label>
+      </div>
+
+      <!-- Conditional reveal -->
+      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-father-employed">
+        <div class="govuk-form-group">
+          <div class="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="father-supervising" name="father-supervisory-status" type="radio" value="supervising">
+              <label class="govuk-label govuk-radios__label" for="father-supervising">Supervising</label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="father-not-supervising" name="father-supervisory-status" type="radio" value="not-supervising">
+              <label class="govuk-label govuk-radios__label" for="father-not-supervising">Not supervising</label>
+            </div>
+          </div>
+        </div>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="father-industry">What industry do they work in?</label>
+          <input class="govuk-input govuk-!-width-one-half" id="father-industry" name="father-industry" type="text">
+        </div>
+      </div>
+
+      <!-- Other options -->
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-father-self-employed" name="employment-father" type="radio" value="self-employed">
+        <label class="govuk-label govuk-radios__label" for="employment-father-self-employed">Self-employed</label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-father-not-employed" name="employment-father" type="radio" value="not-employed">
+        <label class="govuk-label govuk-radios__label" for="employment-father-not-employed">No gainful employment</label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-father-not-known" name="employment-father" type="radio" value="not-known">
+        <label class="govuk-label govuk-radios__label" for="employment-father-not-known">Not known</label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="employment-father-refused" name="employment-father" type="radio" value="refused">
+        <label class="govuk-label govuk-radios__label" for="employment-father-refused">Refused to answer</label>
+      </div>
+    </div>
+  </fieldset>
+</div>
+
 
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "../tasks/index.html"
         }) }}
       </div>
 
