--- a/app/views/births/multipleBirths3/submit/register-page.html
+++ b/app/views/births/multipleBirths3/submit/register-page.html
@@ -94,7 +94,8 @@ href: "javascript:window.history.back()"
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "../tasks/index.html"
         }) }}
       </div>
 
